<resources>
    <string name="app_name">Job Link</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">Login</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="friend_requests">Friend Requests:</string>
    <string name="john_smith">John Smith</string>
    <string name="notifications">Notifications:</string>
    <string name="job_list">Job List:</string>
    <string name="example_job_casual">Example Job - Casual</string>
    <string name="studies_at_jcu">Studies at JCU</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="example_phone_number">0412 345 678</string>
    <string name="example_email_address">example@gmail.com</string>
    <string name="example">Example</string>
    <string name="menu_profile">Profile</string>
    <string name="job_post">Job Post</string>
    <string name="post_a_job">Post A Job</string>
    <string name="job_title">Job Title:</string>
    <string name="job_description">Job Description:</string>
    <string name="start_date">Start Date</string>
    <string name="apply_by">Apply By:</string>
    <string name="contact">Contact:</string>
    <string name="employer">Employer:</string>
    <string name="post_job">Post Job</string>
    <string name="save_changes">Save Changes</string>
    <string name="job">JOB</string>
    <string name="recommend">Recommend</string>
    <string name="select_a_student">Select a student</string>
    <string name="search">Search</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="menu_friends">Friends</string>
</resources>
