<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    <TextView-->
    <!--        android:id="@+id/text_home"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/home_friend_request_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_friend_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friend_requests"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/home_example_friend_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="12sp">

            <TextView
                android:id="@+id/friend_request_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/john_smith"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/friend_request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_check_black_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/friend_request_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_clear_black_24dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_notification_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_job_list_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_job_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_list"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/home_job_list_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/example_job_casual"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>